feat: add account readone endpoint
